# amu

./: Cargo.toml  LICENSE  README.md  SPEC.md  dist-workspace.toml
.github/workflows/: release.yml
Formula/: amu.rb  dotlink.rb
demo/: .gitignore  README.md  demo-cleanup.sh  demo-setup.sh  demo.tape  resize.sh
docs/rules/: commit.schema.md
src/: cli.rs  config.rs  error.rs  links.rs  main.rs  stow.rs
tests/: integration.rs
