[package]
name = "dotlink"
version = "0.1.0"
edition = "2021"
description = "Dotfiles linker using GNU stow"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
shellexpand = "3"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
