[package]
name = "amu"
version = "0.1.3"
edition = "2021"
description = "Merge multiple sources into one target with symlinks using stow"
license = "MIT"
repository = "https://github.com/ShotaIuchi/amu"
homepage = "https://github.com/ShotaIuchi/amu"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
shellexpand = "3"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
